// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt List default 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - display: horizontal 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal">
  This is a list
</ul>
`;

exports[`Bolt List prop - display: horizontal@medium 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@medium">
  This is a list
</ul>
`;

exports[`Bolt List prop - display: horizontal@small 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@small">
  This is a list
</ul>
`;

exports[`Bolt List prop - display: horizontal@xsmall 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@xsmall">
  This is a list
</ul>
`;

exports[`Bolt List prop - display: horizontal@xxsmall 1`] = `
<ul class="e-bolt-list e-bolt-list--display-horizontal@xxsmall">
  This is a list
</ul>
`;

exports[`Bolt List prop - display: vertical 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - horizontal align: center 1`] = `
<ul class="e-bolt-list e-bolt-list--align-center">
  This is a list
</ul>
`;

exports[`Bolt List prop - horizontal align: end 1`] = `
<ul class="e-bolt-list e-bolt-list--align-end">
  This is a list
</ul>
`;

exports[`Bolt List prop - horizontal align: justify 1`] = `
<ul class="e-bolt-list e-bolt-list--align-justify">
  This is a list
</ul>
`;

exports[`Bolt List prop - horizontal align: start 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - inset: false 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - inset: true 1`] = `
<ul class="e-bolt-list e-bolt-list--inset">
  This is a list
</ul>
`;

exports[`Bolt List prop - no wrapping: false 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - no wrapping: true 1`] = `
<ul class="e-bolt-list e-bolt-list--nowrap">
  This is a list
</ul>
`;

exports[`Bolt List prop - separator: dashed 1`] = `
<ul class="e-bolt-list e-bolt-list--separator-dashed">
  This is a list
</ul>
`;

exports[`Bolt List prop - separator: none 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - separator: solid 1`] = `
<ul class="e-bolt-list e-bolt-list--separator-solid">
  This is a list
</ul>
`;

exports[`Bolt List prop - spacing: large 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-large">
  This is a list
</ul>
`;

exports[`Bolt List prop - spacing: medium 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-medium">
  This is a list
</ul>
`;

exports[`Bolt List prop - spacing: none 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-none">
  This is a list
</ul>
`;

exports[`Bolt List prop - spacing: small 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-small">
  This is a list
</ul>
`;

exports[`Bolt List prop - spacing: xlarge 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-xlarge">
  This is a list
</ul>
`;

exports[`Bolt List prop - spacing: xsmall 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - spacing: xxsmall 1`] = `
<ul class="e-bolt-list e-bolt-list--spacing-xxsmall">
  This is a list
</ul>
`;

exports[`Bolt List prop - tag: ol 1`] = `
<ol class="e-bolt-list">
  This is a list
</ol>
`;

exports[`Bolt List prop - tag: ul 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - vertical align: center 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - vertical align: end 1`] = `
<ul class="e-bolt-list e-bolt-list--valign-end">
  This is a list
</ul>
`;

exports[`Bolt List prop - vertical align: start 1`] = `
<ul class="e-bolt-list e-bolt-list--valign-start">
  This is a list
</ul>
`;
